Working on fixing overflows.

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -218,7 +218,7 @@ body{
 
     #content_container{
         margin: 1% auto;
-        max-width: 100%;
+        max-width: 88%;
     }
 
 
